--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -18,6 +18,13 @@ ul {
 a {
     text-decoration: none;
 }
+h1 {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 150%;
+    margin: 0px 0px 10px 0px;
+    padding: 0px;
+}
 .blogPage {
     min-height: calc(100vh - 132px);
     background-color: #ededed;
