--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -29,6 +29,35 @@ h1 {
     min-height: calc(100vh - 132px);
     background-color: #ededed;
 }
+.hero {
+    position: relative;
+    z-index: 2;
+    color: #000;
+    text-shadow: 0 0.0625em 0.5em rgba(255, 255, 255,0.25);
+    height: 200px;
+    text-align: center;
+    line-height: 200px;
+    font-size: 72px;
+    font-weight: 500;
+}
+.nothing {
+    position: relative;
+    z-index: 2;
+    padding: 10px 0;
+    text-align: center;
+    font-weight: 400;
+    color: #fff;
+    box-shadow:inset 0 1px rgba(0,0,0,0.05),0 8px 16px rgba(0,0,0,0.05);
+    }
+    .addMore {
+    color: #a282d9;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.7);
+    &:hover {
+        color: #6b2ad9;
+    }
+    margin: 16px 0;
+}
 .c6b2ad9 {
     color: #6b2ad9;
 }
@@ -41,12 +70,25 @@ h1 {
 .bd56569 {
     background-color: #d56569;
 }
+.normalContainer {
+    max-width: 800px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
+    .normalContainerTitle {
+      padding: 16px 0;
+      font-weight: bold;
+      font-size: 22px;
+      color: #d3b9ff;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.5);
+    }
+}
 @media screen and (max-width: 800px) {
     .blogPage {
         padding-top: 88px;
     }
 }
-.Article {
+.innerPage {
     h1 {
         font-size: 24px;
         font-weight: 500;
