加了不少东西

--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -49,14 +49,13 @@ h1 {
     color: #fff;
     box-shadow:inset 0 1px rgba(0,0,0,0.05),0 8px 16px rgba(0,0,0,0.05);
     }
-    .addMore {
-    color: #a282d9;
-    cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.7);
-    &:hover {
-        color: #6b2ad9;
-    }
-    margin: 16px 0;
+    .add-more {
+        color: #a282d9;
+        cursor: pointer;
+        background-color: rgba(255, 255, 255, 0.7);
+        &:hover {
+            color: #6b2ad9;
+        }
 }
 .c6b2ad9 {
     color: #6b2ad9;
